tests/ui/traits/next-solver/cycles/inductive-fixpoint-hang.stderr
error[E0275]: overflow evaluating the requirement `W<_>: Trait`
  --> $DIR/inductive-fixpoint-hang.rs:31:19
   |
LL |     impls_trait::<W<_>>();
   |                   ^^^^
   |
note: required by a bound in `impls_trait`
  --> $DIR/inductive-fixpoint-hang.rs:28:19
   |
LL | fn impls_trait<T: Trait>() {}
   |                   ^^^^^ required by this bound in `impls_trait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
